@@ -89,4 +89,5 @@
   <li>Denny de la Haye</li>
   <li>Krzysztof Rudnik</li>
   <li>Adam Wilson</li>
+  <li>Iván Chavero</li>
 </ul>
